ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: asteroid-herder-ingress
  namespace: asteroid-herder
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - http:
      paths:
        - path: /app01
          pathType: Prefix
          backend:
            service:
              name: web-app-svc
              port: 
                number: 80
        - path: /
          pathType: Prefix
          backend:
            service:
              name: enquiry-app-svc
              port: 
                number: 80
